# CachedParameterisation

./: .gitignore  CMakeLists.txt  CachedParam.cc  README.md  data.py  run.py  show.py  v_count_mem  v_count_vox  v_smart_mem  v_smart_vox
examples/basic/: CMakeLists.txt  README.md  data.py
examples/basic/include/: Parameterisation.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
examples/basic/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
include/: Cache.hh  CachedParameterisation.hh  DataStream.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  Helpers.hh  Neighbourhood.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh  SteppingAction.hh  Timer.hh
macros/: config.mac  run.mac  vis.mac
patches/: G4PVParameterised.cc  G4PVParameterised.hh  G4PVReplica.cc  G4PVReplica.hh
src/: CachedParameterisation.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  Helpers.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc  SteppingAction.cc
